# mint-boy

./: CMakeLists.txt  README.md  log.txt  log2.txt
.circleci/: config.yml
docs/: gameboy.md
docs/GB/: gameboy.md
docs/GBA/: gameboy_advanced.md
include/: CMakeLists.txt
include/core/: main.hpp
mintboy/: CMakeLists.txt
mintboy/include/core/: bus.h  cpu.h  memory.h
mintboy/include/cpu/: cpu.h
mintboy/include/util/: arguments.h  common.h  log.h
mintboy/src/: main.c
mintboy/src/core/: bus.c  cpu.c
mintboy/src/cpu/: cpu.c
mintboy/src/util/: arguments.c  common.c  log.c
scripts/: install.bash  install_dependencies
src/: CMakeLists.txt
src/core/: main.cpp
